--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,7 @@
         android:name="com.jack.test.CustomApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:supportsRtl="true">
         <activity android:name="com.jack.test.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,5 +15,10 @@
             </intent-filter>
         </activity>
     </application>
+
+
+    <uses-sdk
+        android:minSdkVersion="14"
+        android:targetSdkVersion="27"/>
 
 </manifest>
